Add office hours sidebar, fix solutions toggle

--- a/unit_settings.json
+++ b/unit_settings.json
@@ -69,7 +69,7 @@
         ],
         "Due Dates": [
             {
-                "name": "hw1-definitions-and-notation-CSE20F21",
+                "name": "hw1-title",
                 "due": "10/5/21 at 11pm"
             },
             {
