--- a/website-settings.json
+++ b/website-settings.json
@@ -1,5 +1,5 @@
 {
-    "Domain Name": "https://discrete-math-for-cs.github.io/website/",
+    "Domain Name": "https://cse-template.github.io/website/",
     "Global Class Name": "Discrete Math for CS",
     "Course Offering Title": "CSE 1000 Fall 2021",
     "Term": "Fall 2021",
