--- a/website-settings.json
+++ b/website-settings.json
@@ -9,5 +9,6 @@
     "IncludeUngroupedSnippets": true,
     "Podcast": "",
     "Annotated": "-annotated",
-    "Office Hours": "<iframe src=\"https://calendar.google.com/calendar/embed?src=eng.ucsd.edu_m71n0crh5tdlujeg2tp4b8mn8o%40group.calendar.google.com&ctz=America%2FLos_Angeles\" style=\"border: 0\" width=\"800\" height=\"600\" frameborder=\"0\" scrolling=\"no\"></iframe>"
+    "Office Hours": "<iframe src=\"https://calendar.google.com/calendar/embed?src=eng.ucsd.edu_m71n0crh5tdlujeg2tp4b8mn8o%40group.calendar.google.com&ctz=America%2FLos_Angeles\" style=\"border: 0\" width=\"800\" height=\"600\" frameborder=\"0\" scrolling=\"no\"></iframe>",
+    "Compiled Activity Snippets": "False"
 }
